# matmul-profiler

./: .gitignore  CMakeLists.txt  README.md
benchmark/: bench.sh  plot_results.py
python/: bench_python.py  naive_matmul.py
src/: main_bench.c  matmul_common.h  naive_c.c  omp_c.c  reorder_c.c  simd_c.c  tiled_c.c
